[gd_scene load_steps=9 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://hurttriggerhitbox/Triggerbox.tscn" type="PackedScene" id=2]
[ext_resource path="res://hurttriggerhitbox/Hurtbox.tscn" type="PackedScene" id=3]
[ext_resource path="res://autoload/Stats.tscn" type="PackedScene" id=4]
[ext_resource path="res://enemy/scripts/EnemyTemplate.gd" type="Script" id=5]

[sub_resource type="CircleShape2D" id=80]
radius = 8.0

[sub_resource type="CircleShape2D" id=81]
radius = 64.4981

[sub_resource type="CapsuleShape2D" id=82]
radius = 16.0
height = 24.0

[node name="EnemyTemplate" type="KinematicBody2D"]
collision_layer = 32
collision_mask = 0
script = ExtResource( 5 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0, 4.76837e-07 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 80 )

[node name="ChaseTriggerBox" parent="." instance=ExtResource( 2 )]

[node name="CollisionShape2D" parent="ChaseTriggerBox" index="0"]
shape = SubResource( 81 )

[node name="EnemyHurtbox" parent="." instance=ExtResource( 3 )]
collision_layer = 64
collision_mask = 16

[node name="CollisionShape2D" parent="EnemyHurtbox" index="0"]
shape = SubResource( 82 )

[node name="EnemyBulletSpawn" type="Position2D" parent="."]
position = Vector2( 32, 0 )

[node name="EnemyStats" parent="." instance=ExtResource( 4 )]

[connection signal="area_entered" from="EnemyHurtbox" to="." method="_on_EnemyHurtbox_area_entered"]
[connection signal="no_health" from="EnemyStats" to="." method="_on_EnemyStats_no_health"]

[editable path="ChaseTriggerBox"]
[editable path="EnemyHurtbox"]
